<resources>
    <string name="app_name">vegiedo</string>
    <string name="come_in_vegiedo">VEGIEDO에 오신 것을</string>
    <string name="welcom">환영해요!</string>
    <string name="easy_login">간편로그인으로 시작할까요?</string>
    <string name="set_nickname">닉네임을 설정해주세요</string>

    <string name="min_char">닉네임은 최소 2글자 이상 입력하셔야해요!</string>
    <string name="duplication_name">누군가 쓰고있는 닉네임 입니다.</string>
    <string name="try_again">다시 적어주세요!</string>
    <string name="enter_nickname">닉네임을 입력해주세요</string>

    <string name="hey_rabbit">모든걸먹는토끼430님</string>
    <string name="interested_tag">관심 태그를  </string>
    <string name="three_more">3개 이상</string>
    <string name="let_click"> 눌러주세요!</string>

    <string name="select_three_or_more">관심태그를 3개 이상 눌러주세요!</string>
    <string name="select_at_filter">"필터링에서 언제든지 다시 설정할 수 있어요!"</string>
    <string name="not_found">아이쿠, 찾을 수 없다 메에에에!</string>
    <string name="set_more_filter">추천태그를 눌러주거나 거리를 더 늘려보라메에에에</string>

    <string name="tag_fruittarian">#프루테리언</string>
    <string name="tag_vegan_bakery">#식물성 베이커리</string>
    <string name="tag_vegan">#비건</string>
    <string name="tag_all_vegan">#완전 비건</string>
    <string name="tag_fake_meat">#대체육</string>
    <string name="tag_lacto">#락토</string>
    <string name="tag_ovo">#오보</string>
    <string name="tag_lacto_ovo">#락토 오보</string>
    <string name="tag_pescatarian">#페스코테리언</string>
    <string name="tag_pollo">#폴로</string>
    <string name="tag_keto">#키토 식단</string>
    <string name="tag_gluten_free">#글루텐프리</string>

    <string name="review">솔직 리뷰</string>
    <string name="storeName">가게이름</string>
    <string name="storeTag">#태그</string>

    <string name="recommended_tag">추천태그</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- dialog string -->
    <string name="accept_reporting">폐점가게 신고가 접수되었습니다.\n확인 후 처리하도록 하겠습니다. 감사합니다.</string>
    <string name="delete_review_question">리뷰를 삭제하시겠어요?</string>
    <string name="input_title">제목을 입력 해주세요!</string>
    <string name="input_content">내용을 입력 해주세요!</string>
    <string name="short_text_alert">글이 너무 짧습니다\n15글자 이상 작성해주세요!</string>
    <string name="delete_text_question">글을 삭제하시겠어요?</string>
    <string name="profile_image_question">어떤 프로필 사진을 사용하고 싶나요?</string>
    <string name="withdrawal_question">회원 탈퇴 하시겠어요.......?? 진짜??</string>
    <string name="input_blank">모든 빈칸을 입력해주세요.</string>
    <string name="complete_new_store_registration">신규 가게 등록 요청이 완료되었습니다.</string>
    <string name="push_3tag">태그를 3개이상 눌러주세요!</string>
    <string name="push_1tag">태그를 1개이상 눌러주세요!</string>
    <string name="stamp_book">스탬프북</string>


    <string name="GOOGLE_CLIENT_KEY">505975847219-mov8ltkf0d4b2apr0lo4nc03faj9si8c.apps.googleusercontent.com</string>
    <string name="report_type_photo">부적절한 사진 사용</string>
    <string name="report_type_lan">부적절한 언어 사용</string>
    <string name="report_type_falseInfo">허위 정보 기재</string>
    <string name="report_type_etc">기타</string>
    <string name="report_closure_store">폐점가게 신고</string>
    <string name="mypage_already_use_nickname">누군가가 쓰고 있는 닉네임입니다.\n다시 적어주세요!</string>
    <string name="nickname_change_rule">특수문자X, 최소 2~10글자</string>
    <string name="mypage_register_new_store">신규 가게 등록</string>
    <string name="mypage_inquiry">문의기능</string>
    <string name="mypage_policy">약관정책</string>
    <string name="mypage_open_source">오픈소스</string>


</resources>