<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="80dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="거리"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:padding="20dp"
        ></TextView>

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:progressDrawable="@drawable/seekbar_progress"
        android:thumb="@drawable/seekbar_thumb"
        app:layout_constraintTop_toBottomOf="@+id/distance"
        android:max="30"
        android:progress="5"
     />

    <TextView
        android:id="@+id/seekbar_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="거리"
        android:gravity="center"
        android:textSize="14dp"
        android:paddingTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintLeft_toLeftOf="@+id/seekBar"/>

    <TextView
        android:id="@+id/filter_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="태그"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_distance"></TextView>

    <LinearLayout
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_margin="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/filter_tag"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.287">

            <ToggleButton
                android:id="@+id/tag_fruittarian"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_fruittarian"
                android:textOn="@string/tag_fruittarian"></ToggleButton>

            <ToggleButton
                android:id="@+id/tag_vegan"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_vegan"
                android:textOn="@string/tag_vegan"></ToggleButton>

            <ToggleButton
                android:id="@+id/tag_lacto"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_lacto"
                android:textOn="@string/tag_lacto"></ToggleButton>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.444">

            <ToggleButton
                android:id="@+id/tag_ovo"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_ovo"
                android:textOn="@string/tag_ovo"></ToggleButton>

            <ToggleButton
                android:id="@+id/tag_lacto_ovo"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_lacto_ovo"
                android:textOn="@string/tag_lacto_ovo"></ToggleButton>

            <ToggleButton
                android:id="@+id/tag_pesca"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_pescatarian"
                android:textOn="@string/tag_pescatarian"></ToggleButton>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.129">

            <ToggleButton
                android:id="@+id/tag_pollo"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_pollo"
                android:textOn="@string/tag_pollo"></ToggleButton>

            <ToggleButton
                android:id="@+id/tag_keto"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_keto"
                android:textOn="@string/tag_keto"></ToggleButton>

            <ToggleButton
                android:id="@+id/tag_gluten"
                android:layout_width="60dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_gluten_free"
                android:textOn="@string/tag_gluten_free"></ToggleButton>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/btn_complete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="완료"
        android:textColor="#333333"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="40dp"
        tools:layout_editor_absoluteY="666dp"></TextView>



</androidx.constraintlayout.widget.ConstraintLayout>