<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/imagetext3"
        android:layout_marginTop="35dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.287">

            <ToggleButton
                android:id="@+id/mypage_vegan_bakery"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_vegan_bakery"
                android:textOn="@string/tag_vegan_bakery"/>

            <ToggleButton
                android:id="@+id/mypage_all_vegan"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_all_vegan"
                android:textOn="@string/tag_all_vegan"/>

            <ToggleButton
                android:id="@+id/mypage_fake_meat"
                android:layout_width="110dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_fake_meat"
                android:textOn="@string/tag_fake_meat"/>

        </LinearLayout>


        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.444">

            <ToggleButton
                android:id="@+id/mypage_lacto"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_lacto"
                android:textOn="@string/tag_lacto"/>

            <ToggleButton
                android:id="@+id/mypage_tbLactoOvo"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_lacto_ovo"
                android:textOn="@string/tag_lacto_ovo"/>

            <ToggleButton
                android:id="@+id/mypage_tbPescatarian"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_pescatarian"
                android:textOn="@string/tag_pescatarian"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView7"
            app:layout_constraintVertical_bias="0.129">

            <ToggleButton
                android:id="@+id/mypage_tbPollo"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_pollo"
                android:textOn="@string/tag_pollo"/>

            <ToggleButton
                android:id="@+id/mypage_tbKeto"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_keto"
                android:textOn="@string/tag_keto"/>

            <ToggleButton
                android:id="@+id/mypage_tbGlutenFree"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/btn_toggle"
                android:checked="false"
                android:textColor="@drawable/btn_togle_text_color"
                android:textOff="@string/tag_gluten_free"
                android:textOn="@string/tag_gluten_free" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/imagetext3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="태그 *"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/storeImageView"
        app:layout_constraintTop_toBottomOf="@+id/storeImageView" />

    <TextView
        android:id="@+id/StoreRegister_compelete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="40dp"
        android:text="완료"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/store_image_plus_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/plus"
        app:layout_constraintBottom_toBottomOf="@+id/storeImageView"
        app:layout_constraintEnd_toEndOf="@+id/storeImageView"
        app:layout_constraintStart_toStartOf="@+id/storeImageView"
        app:layout_constraintTop_toTopOf="@+id/storeImageView" />

    <ImageView
        android:id="@+id/storeImageView"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/dashed_border"
        app:layout_constraintStart_toStartOf="@+id/imagetext2"
        app:layout_constraintTop_toBottomOf="@+id/imagetext2" />

    <TextView
        android:id="@+id/imagetext2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="사진"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/address_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/address_edit_text" />


    <ImageView
        android:id="@+id/backward_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/backward"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/service_question1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        android:text="상호명 *"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backward_btn" />

    <EditText
        android:id="@+id/store_name_edit_text"
        android:layout_width="350dp"
        android:layout_height="32dp"
        android:background="@drawable/et_custom_n"
        android:inputType="textMultiLine"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/service_question1"
        app:layout_constraintTop_toBottomOf="@+id/service_question1" />

    <EditText
        android:id="@+id/address_edit_text"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:background="@drawable/et_custom_n"
        android:inputType="textMultiLine"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="@+id/service_question2"
        app:layout_constraintTop_toBottomOf="@+id/service_question2" />

    <TextView
        android:id="@+id/service_question2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="주소 *"
        android:textColor="@color/black"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="@+id/store_name_edit_text"
        app:layout_constraintTop_toBottomOf="@+id/store_name_edit_text" />


</androidx.constraintlayout.widget.ConstraintLayout>