<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:background="@drawable/dialog_background_round"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="353dp"
    android:layout_height="500dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/green_x_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@drawable/green_x_circle"
            android:layout_marginTop="13dp"
            android:layout_marginRight="15dp"/>


        <TextView
            android:id="@+id/put_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="신고 유형을 선택 해주세요"
            android:textColor="@color/black"
            android:layout_marginTop="30dp"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_gravity="center">

            <ToggleButton
                android:id="@+id/report_type_btn1"
                android:textOff="@string/report_type_photo"
                android:textOn="@string/report_type_photo"
                android:textSize="12sp"
                android:textColor="@drawable/btn_togle_text_color"
                android:layout_width="180dp"
                android:layout_height="37dp"
                android:background="@drawable/btn_toggle_report_type"
                android:scaleType="center"
                android:layout_marginBottom="10dp"/>

            <ToggleButton
                android:id="@+id/report_type_btn2"
                android:textOff="@string/report_type_lan"
                android:textOn="@string/report_type_lan"
                android:textSize="12sp"
                android:textColor="@drawable/btn_togle_text_color"
                android:layout_width="180dp"
                android:layout_height="37dp"
                android:background="@drawable/btn_toggle_report_type"
                android:scaleType="center"
                android:layout_marginBottom="10dp"/>

            <ToggleButton
                android:id="@+id/report_type_btn3"
                android:textOff="@string/report_type_falseInfo"
                android:textOn="@string/report_type_falseInfo"
                android:textSize="12sp"
                android:textColor="@drawable/btn_togle_text_color"
                android:layout_width="180dp"
                android:layout_height="37dp"
                android:background="@drawable/btn_toggle_report_type"
                android:scaleType="center"
                android:layout_marginBottom="10dp"/>

            <ToggleButton
                android:id="@+id/report_type_btn4"
                android:textOff="기타"
                android:textOn="기타"
                android:textSize="12sp"
                android:textColor="@drawable/btn_togle_text_color"
                android:layout_width="180dp"
                android:layout_height="37dp"
                android:background="@drawable/btn_toggle_report_type"
                android:scaleType="center"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>


        <EditText
            android:id="@+id/other_reasons_text"
            android:layout_width="304dp"
            android:layout_height="88dp"
            android:layout_gravity="center"
            android:hint="기타 사유를 적어주세요."
            android:visibility="invisible"
            android:padding="10dp"
            android:textSize="12sp"
            android:gravity="top"
            android:background="@drawable/edittext_border_line_n"/>

        <TextView
            android:id="@+id/num_of_letter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0자 / 200자"
            android:visibility="invisible"
            android:textSize="12sp"
            android:textColor="@color/black"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_gravity="right"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="5dp"
            android:gravity="right"
            android:layout_marginRight="10dp">

            <TextView
                android:id="@+id/reporting_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:text="완료" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>